--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/630f3095fb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
