--- a/index.html
+++ b/index.html
@@ -8,10 +8,67 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/630f3095fb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://practical-poitras-d410a0.netlify.app/packages/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quintessential&family=Roboto:ital,wght@0,300;1,400&family=Zen+Kurenaido&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="navbar-title">
+            Quizzy
+        </div>
+        <div class="form-control">
+            <span class="input-icon"><i class="fas fa-search"></i></span>
+            <input type="text" placeholder="search here" class="input">
+        </div>
+        <div class="navbar-items">
 
+            <a href="#" class="btn btn-primary">Login</a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="grid grid-1-3 display-center">
+            <div>
+                <div class="card">
+                    <div class="card-vertical-md">
+                        <div class="card-img card-img-1">
+
+                        </div>
+                        <div class="card-head">
+                            <h3 class="card-title">Game of thrones</h3>
+                            <p>Take this quiz to test yourself!</p>
+                            <small class="text-grey">5 questions</small>
+                        </div>
+                        <div class="card-links">
+                            <a href="rules.html" class="btn btn-large btn-primary text-center">
+                               Take test here
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="card-vertical-md">
+                        <div class="card-img card-img-2">
+
+                        </div>
+                        <div class="card-head">
+                            <h3 class="card-title">Breaking Bad</h3>
+                            <p>Take this quiz to test yourself!</p>
+                            <small class="text-grey">5 questions</small>
+                        </div>
+                        <div class="card-links">
+                            <a href="rules.html" class="btn btn-large btn-primary text-center">
+                                Take test here
+                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
