--- a/result.html
+++ b/result.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-title">
-            Astra
+            quizzy
         </div>
         <div>
             <a href="index.html" class="navbar-link">Home</a>
