refractored result page

--- a/result.html
+++ b/result.html
@@ -36,7 +36,7 @@
                     <div class="card-text">
                         <div class="flex my-s"><span>Question: 1/5</span> <span>score: 0</span></div>
                         <div class="card-head my-s">
-                            <div class="card-title text-tertiary">What is the motto of House Stark?</div>
+                            <span class="card-title text-tertiary">What is the motto of House Stark?</span>
                         </div>
                         <div class="card-body">
                             <button class="btn btn-secondary-outline toast toast-success">Winter is coming</button>
@@ -51,7 +51,7 @@
                     <div class="card-text">
                         <div class="flex my-s"><span>Question: 2/5</span> <span>score: 0</span></div>
                         <div class="card-head my-s">
-                            <div class="card-title text-tertiary">Where is the seat of House Lannister?</div>
+                            <span class="card-title text-tertiary">Where is the seat of House Lannister?</span>
                         </div>
                         <div class="card-body">
                             <button class="btn btn-secondary-outline">Winterfell</button>
@@ -66,7 +66,7 @@
                     <div class="card-text">
                         <div class="flex my-s"><span>Question: 3/5</span> <span>score: 0</span></div>
                         <div class="card-head my-s">
-                            <div class="card-title text-tertiary">Which dragon does Jon ride?</div>
+                            <span class="card-title text-tertiary">Which dragon does Jon ride?</span>
                         </div>
                         <div class="card-body">
                             <button class="btn btn-secondary-outline">Drogon</button>
@@ -83,7 +83,7 @@
                     <div class="card-text">
                         <div class="flex my-s"><span>Question: 4/5</span> <span>score: 0</span></div>
                         <div class="card-head my-s">
-                            <div class="card-title text-tertiary">Who wields the Oath keeper?</div>
+                            <span class="card-title text-tertiary">Who wields the Oath keeper?</span>
                         </div>
                         <div class="card-body">
                             <button class="btn btn-secondary-outline">Jaime Lanisster</button>
@@ -98,7 +98,7 @@
                     <div class="card-text">
                         <div class="flex my-s"><span>Question: 5/5</span> <span>score: 0</span></div>
                         <div class="card-head my-s">
-                            <div class="card-title text-tertiary">Who was Rhaegar's first wife?</div>
+                            <span class="card-title text-tertiary">Who was Rhaegar's first wife?</span>
                         </div>
                         <div class="card-body">
                             <button class="btn btn-secondary-outline toast toast-success">Elia Martell</button>
