--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/630f3095fb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://practical-poitras-d410a0.netlify.app/packages/index.css">
+    <link rel="stylesheet" href="https://enma1.netlify.app/packages/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Quintessential&family=Roboto:ital,wght@0,300;1,400&family=Zen+Kurenaido&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
